--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,7 @@ html > option {
 
 @layer components {
   .grid-card {
-    @apply grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-3 desktop:grid-cols-4 place-items-center;
+    @apply grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-3 monitor:grid-cols-4 place-items-center;
   }
 }
 
